--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services: # docker 로 감싸서 배포할거에요
 
 before_install: 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t test -f Dockerfile ./
+  - docker build -t travis -f Dockerfile ./
 
 branches: # 해당 브렌치로 push 될 경우에만 반응합니다
   only:
