--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - docker build -t lgu0521/travis -f Dockerfile ./
 
 script:
-  - docker run -e CI=true lgu0521/travis npm run start
+  - docker run -p 127.0.0.1:8081 -e CI=true lgu0521/travis npm run start
 
 branches: # 해당 브렌치로 push 될 경우에만 반응합니다
   only:
